--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>by.ralovets</groupId>
-  <artifactId>magicinjector</artifactId>
+  <artifactId>majector</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>magicinjector</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <name>majector</name>
+  <url>https://vk.com/byralovets</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
